# Xyzen

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PRODUCT_INTERACTION.md  README.md  README_zh.md  ROADMAP.md  TODO.md  commitlint.config.mjs  justfile  package.json
service/: .dockerignore  Dockerfile  README.md  README_zh.md  alembic.ini  pyproject.toml  pyright_output.txt
service/app/: main.py  worker.py
service/app/agents/: __init__.py  agent_tools.py  base_graph_agent.py  factory.py  graph_builder.py  graph_builder_v2.py  mcp_tools.py  react_agent.py  scientific_figure_agent.py  state.py  types.py  utils.py
service/app/api/: __init__.py  proxy.py
service/app/common/: __init__.py
service/app/configs/: __init__.py  image.py  llm.py  oss.py  redis.py  searxng.py
service/app/core/: celery_app.py  checkin.py  consume.py  consume_calculator.py  consume_strategy.py  mcp.py  redemption.py  storage.py  system_agent.py  version.py  websocket.py
service/app/mcp/: __init__.py  builtin_tools.py  dify.py  document_spec.py  dynamic_mcp_server.py  example.py  file_handlers.py  graph_tools.py  knowledge.py  lab.py  literature.py  osdl.py  search.py  test.py
service/app/middleware/: dynamic_mcp_server.py
service/app/models/: __init__.py  agent.py  agent_like.py  agent_marketplace.py  agent_run.py  agent_snapshot.py  checkin.py  citation.py  consume.py  file.py  file_knowledge_set_link.py  folder.py  graph.py  knowledge_set.py  message.py  provider.py  redemption.py  session_stats.py  sessions.py
service/app/repos/: __init__.py  agent.py  agent_like.py  agent_marketplace.py  agent_run.py  agent_snapshot.py  checkin.py  citation.py  consume.py  file.py  folder.py  graph.py  knowledge_set.py  mcp.py  message.py  provider.py  redemption.py  session.py  session_stats.py  smithery_cache.py  tool.py  topic.py
service/app/schemas/: agent.py  agent_event_payloads.py  chat_event_payloads.py  chat_event_types.py  chat_events.py  graph_config.py  graph_config_v2.py  message.py  model_tier.py  prompt_config.py  provider.py  response.py  tool_config.py
service/app/tasks/: chat.py
service/app/tools/: __init__.py  capabilities.py  cost.py  image.py  mcp.py  prepare.py  registry.py
service/app/utils/: built_in_tools.py  cleanup.py  manage_tools.py  tool_loader.py  tool_proxy.py
service/cmd/: main.bak.py  main.py  multi_server.py  unify_route.py  wrk.sh
service/common/: __init__.py  exceptions.py
service/common/code/: error_code.py
service/core/: agent_service.py  agent_type_detector.py  chat.py  client.py  consume.py  laboratory.py  mcp.py  redemption.py  storage.py  system_agent.py  websocket.py
service/core/auth/: __init__.py  authentication.py  error_handler.py
service/core/chat/: __init__.py  content_utils.py  execution_router.py  graph_state_converter.py  langchain.py  langgraph.py  messages.py  stream.py  sync.py  tools.py  topic_generator.py
service/core/configs/: auth.py  dify.py  dynamic_mcp_server.py  lab.py  llm.py  mcps.py
service/core/llm/: service.py
service/core/logger/: __init__.py
service/core/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  config.py  factory.py  google.py  manager.py  openai.py  startup.py
service/docs/: README.md  api_response_docs.md  error_handling.md
service/handler/: __init__.py
service/handler/api/: __init__.py  base.py  chat.py  providers.py  proxy.py
service/handler/builtin_agents/: __init__.py  scientific_figure_agent.py
service/handler/mcp/: __init__.py  dify.py  dynamic_mcp_server.py  graph_tools.py  knowledge.py  lab.py  osdl.py  other.py
service/handler/ws/: __init__.py
service/infra/database/: connection.py
service/infra/storage/: __init__.py  blob.py
service/internal/configs/: __init__.py  auth.py  config.py  database.py  dynamic_mcp_server.py  lab.py  llm.py  logger.py  oss.py
service/middleware/: dynamic_mcp_server.py
service/middleware/auth/: __init__.py  bohr_app.py  bohrium.py  cache.py  casdoor.py  simple_cache.py
service/middleware/database/: __init__.py  connection.py
service/middleware/logger/: __init__.py
service/migrations/: README  README.md  env.py
service/migrations/versions/: 03630403f8c2_add_thinking_content_to_message.py  06220fc6f1ff_add_google_search_enabled.py  0a40031876f0_add_smithery_cache.py  16fcd09524ba_add_session_spatial_layout.py  1a3d49a2b233_modify_provider_id_with_set_null.py  244a9ec95012_initial_migration.py  25b4116e5c65_remove_unique_constraint_from_tool_name.py  2f7e4f948ed0_add_file.py  345d4e5e7ec4_add_is_published.py  36ab2d81f127_add_knowledge_set.py  3afab9b3be0e_add_agent_scope.py  3d5e4ae2bc9b_add_agent_marketplace_and_snapshot_.py  46b2f65a7af7_update_provider.py  504ca3e34a8c_link_agent_to_knowledge_base.py  522a1aee3f00_add_tool_tool_version_and_tool_function_.py  5319e6d0a614_add_provider_type_and_is_default_to_.py  5c6c342a4420_add_sort_order_to_agent.py  69dab3a4473b_add_category_to_mcpserver.py  6c50cf5ba7f7_init.py  70ee7fb4d40b_add_check_in_system_for_daily_rewards.py  (+35 more)
service/models/: __init__.py  agent.py  consume.py  file.py  graph.py  links.py  mcp.py  mcps.py  message.py  messages.py  provicers.py  provider.py  providers.py  redemption.py  sessions.py  smithery_cache.py  threads.py  tool.py  topic.py  topics.py  users.py
service/repo/: __init__.py  agent.py  consume.py  graph.py  mcp.py  message.py  provider.py  session.py  smithery_cache.py  tool.py  topic.py
service/repos/: __init__.py  agent.py  citation.py  consume.py  file.py  folder.py  graph.py  mcp.py  message.py  provider.py  redemption.py  session.py  tool.py
service/repository/: __init__.py  message_repository.py  provider_repository.py
service/schemas/: chat_events.py  provider.py  providers.py  response.py
service/tests/: __init__.py  conftest.py  test_integration.py
service/utils/: built_in_tools.py  cleanup.py  code_analyzer.py  json_patch.py  logger_config.py  manage_tools.py  parser.py  requirements_parser.py  scope.py  tool_loader.py  tool_management.py  tool_proxy.py
(+825 files in other folders)
